# wpnl

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  package-lock.json  package.json
src/: info.rs  main.rs  resources.rs  sysinfo_broadcast.rs
web/: index.html  package-lock.json  package.json  tailwind.config.cjs
web/src/: App.svelte  proto.ts  tools.ts
web/src/components/: Cpu.svelte  CpuChart.svelte  CpuCores.svelte  CpuDoughnut.svelte  Dashboard.svelte  Info.svelte  Memory.svelte  MemoryChart.svelte  MemoryDoughnut.svelte  Resources.svelte  SwapDoughnut.svelte
