[package]
name = "wpnl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
argh = "0.1.9"
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio = { version = "1.21.2", features = ["full"] }
