[package]
name = "wpnl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2"
actix-web-lab = "0.18"
argh = "0.1"
log = "0.4"
sysinfo = "0.26"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21", features = ["rt", "macros", "time", "rt-multi-thread"] }
